# GAL

./: README.md  trends2023.md
Alignment/: introduction.md  quickstart.md
Applied Research/Alignment/: introduction.md  quickstart.md
Applied Research/GenAI for Vision/: text-to-image.md
Applied Research/GenAI for Vision/examples/: im2text_finetuning.ipynb
Applied Research/LLM Alignment/: introduction.md
Applied Research/LLM Applications/: rag.md  reasoning.md
GenAI for Vision/: image-to-text.md  introduction.md  text-to-image.md
GenAI for Vision/examples/: im2text_applications.ipynb  openai.ipynb  text_to_image_dalle.ipynb
LLM Tools/: information_retrieval.md
Prompting Tools & Techniques/: information_retrieval.md  rag.md  reasoning.md
Reinforcement Learning from Human Feedback (RLHF)/: introduction.md
Short Tutorials/DS/: completion_demo.ipynb
Short Tutorials/Reinforcement Learning from Human Feedback (RLHF)/: introduction.md  quickstart.md
Speaker Sessions/: README.md
Workshops/: README.md
Workshops/2024-03-22 - Evaluation & Deployment/Evaluation/: .env-template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
Workshops/2024-03-22 - Evaluation & Deployment/Evaluation/notebooks/: 01-llm-app-setup.ipynb  02-dataset-creation.ipynb  03-metrics-definition.ipynb  04-app-evaluation.ipynb  05-optional-langsmith.ipynb  06-optional-langfuse.ipynb  example_w_rag_langchain.ipynb
Workshops/2024-03-22 - Evaluation & Deployment/Evaluation/tests/: test_installation.py
Workshops/2024-03-22 - Evaluation & Deployment/Evaluation/workflows/: tests.yml
Workshops/2024-03-22_LLM-Evaluation-Deployment/: README.md
Workshops/2024-07-10_LLM-Evaluation/: .env-template  README.md  pyproject.toml
(+32 files in other folders)
