[tool.poetry]
name = "llm-evaluation"
version = "0.1.0"
description = "Example code to run LLM evaluation on a use case"
authors = ["angeliney"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
python-dotenv = "^1.0.0"
jupyter = "^1.0.0"
notebook = "^7.1.0"
langchain = "^0.1.8"
openai = "^1.12.0"
langsmith = "^0.1.5"
langfuse = "^2.16.2"
ragas = "^0.1.2"
langchain-community = "^0.0.21"
langchain-openai = "^0.0.6"
bs4 = "^0.0.2"
evaluate = "^0.4.1"
chromadb = "^0.4.23"
langchainhub = "^0.1.14"
datasets = "^2.17.1"
nltk = "^3.8.1"
rouge-score = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pre-commit = "^2.15.0"
black = "^22.0.0"
mypy = "^0.971"
isort = "^5.9.3"
flake8 = "^5.0.0"
pytest-cov = "^3.0.0"
coverage = {version = "^6.0.1", extras = ["toml"]}

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "src/llm_evaluation/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
